Detr training model script

--- a/configs/detr.yaml
+++ b/configs/detr.yaml
@@ -1,9 +1,8 @@
-data: datasets/detection/data.yaml
+# configs/detr.yaml - Simple version
+dataset_path: datasets/detection
 epochs: 25
 batch_size: 2
-learning_rate: 1e-4
-weight_decay: 1e-4
-warmup_steps: 1000
-num_workers: 2
+learning_rate: 0.0001  # Use decimal notation instead of 1e-4
+img_size: 800
 project: models/detectors/detr
 save_checkpoint_every: 5
